syntax = "proto3";

package np2ps;

enum RelayState {
    Direct = 0;
	Relayed = 1;
	Unknown = 2;
}

message IpWrapper {
    uint64 publicID = 5; //for IpMap `map_`
    uint32 ipv4 = 10;
    uint32 port = 20;
    uint32 stun_port = 22;
    optional RelayState relay_state = 25;
    optional string eax_key = 30;
    optional string rsa_public_key = 40;
    repeated uint64 relay_to = 50;
    repeated uint64 relay_by = 60;
}

message IpMap {
    uint64 my_public_ID = 20;
    optional string rsa_private_key = 30;
    repeated IpWrapper wrapper_map = 40;
}
